--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-
-<div>
-    <h2>{{ title }} </h2><hr>
-</div>
-<app-add-record></app-add-record>
-<app-results></app-results>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-layout></app-layout>
+<app-footer></app-footer>
